@@ -1,3 +1,7 @@
+9 May 2007
++ Bug #1713230 : Changed getList to only pull specific columns if set.
+  Thanks Eloi.
+
 Version 0.1.3
 ---------------------------------------------------------------------
 5 April 2007
